--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+<ul><li>lifestyle</li>
+<li>photodiary</li>
+<li>music</li>
+<li>travel</li></ul>
+<img src="" alt="">
+<h1>More than just a music festival</h1>
+
+
 </body>
 </html>
