--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <li>travel</li></ul>
 <img src="" alt="">
 <h1>More than just a music festival</h1>
-
-
+<i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, autem ad? Quas ea doloremque voluptatem ex, impedit, architecto odio eum recusandae nobis possimus ad, numquam labore sunt iure! Sed, aspernatur?</i>
+<h2></h2>
 </body>
 </html>
