--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 <img src="" alt="">
 <h1>More than just a music festival</h1>
 <i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, autem ad? Quas ea doloremque voluptatem ex, impedit, architecto odio eum recusandae nobis possimus ad, numquam labore sunt iure! Sed, aspernatur?</i>
-<h2></h2>
+<h2>Life tastes better with coffee</h2>
+<i>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi ipsa fugiat deleniti, dolorem rerum nam asperiores officiis eius doloremque accusamus corrupti voluptas officia odit saepe ratione eum exercitationem dolor expedita!</i>
+<h3>American dream</h3>
+<i>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus quo doloremque architecto nesciunt explicabo, alias cum qui maxime sapiente temporibus minus tenetur dolorem, minima modi illum ipsa ad delectus aliquam?
+<h4>A day exploring the Alps</h4>
+<i>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus perferendis dolore dolorum iusto odio, exercitationem ex distinctio corrupti vitae voluptas, ea alias. Officiis perferendis voluptatibus voluptates consequuntur est pariatur asperiores.
+    
+</i>
+</h4>
+</i>
 </body>
 </html>
