--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <li>photodiary</li>
 <li>music</li>
 <li>travel</li></ul>
-<img src="" alt="">
+<img src="2.png
+" alt="lifestyle">
 <h1>More than just a music festival</h1>
 <i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, autem ad? Quas ea doloremque voluptatem ex, impedit, architecto odio eum recusandae nobis possimus ad, numquam labore sunt iure! Sed, aspernatur?</i>
 <h2>Life tastes better with coffee</h2>
@@ -19,7 +20,7 @@
 <i>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus quo doloremque architecto nesciunt explicabo, alias cum qui maxime sapiente temporibus minus tenetur dolorem, minima modi illum ipsa ad delectus aliquam?
 <h4>A day exploring the Alps</h4>
 <i>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus perferendis dolore dolorum iusto odio, exercitationem ex distinctio corrupti vitae voluptas, ea alias. Officiis perferendis voluptatibus voluptates consequuntur est pariatur asperiores.
-    
+
 </i>
 </h4>
 </i>
