--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <li>photodiary</li>
 <li>music</li>
 <li>travel</li></ul>
-<img src="2.jpg"  alt="lifestyle" width="300" height="250"> 
+<img src="1(2).JPG"  alt="lifestyle" width="300" height="250"> 
 <h1>More than just a music festival</h1>
 <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, autem ad? Quas ea doloremque voluptatem ex, impedit, architecto odio eum recusandae nobis possimus ad, numquam labore sunt iure! Sed, aspernatur?</div>
-<img src="1.jpg" alt="lifestyle">
+<img src="2.jpg" alt="lifestyle">
 <h1>Life tastes better with coffee</h1>
-<div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi ipsa fugiat deleniti, dolorem rerum nam asperiores officiis eius doloremque accusamus corrupti voluptas officia odit saepe ratione eum exercitationem dolor expedita!</d>
-    <img src="4.jpg" alt="photodiary">
+<div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi ipsa fugiat deleniti, dolorem rerum nam asperiores officiis eius doloremque accusamus corrupti voluptas officia odit saepe ratione eum exercitationem dolor expedita!</div>
+    <img src="3.jpg" alt="photodiary">
 <h1>American dream</h1>
 <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus quo doloremque architecto nesciunt explicabo, alias cum qui maxime sapiente temporibus minus tenetur dolorem, minima modi illum ipsa ad delectus aliquam?</div>
 
-<img src="3.jpg" alt="photodiary">
+<img src="4.jpg" alt="photodiary">
 <h1>A day exploring the Alps</h1>
 <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus perferendis dolore dolorum iusto odio, exercitationem ex distinctio corrupti vitae voluptas, ea alias. Officiis perferendis voluptatibus voluptates consequuntur est pariatur asperiores.</div>
 
