--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <li>photodiary</li>
 <li>music</li>
 <li>travel</li></ul>
-<img src="img\1(2).JPG"alt="lifestyle" width="300" height="250"> 
+<img src="img\1.JPG"alt="lifestyle" width="300" height="250"> 
 <h1>More than just a music festival</h1>
 <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, autem ad? Quas ea doloremque voluptatem ex, impedit, architecto odio eum recusandae nobis possimus ad, numquam labore sunt iure! Sed, aspernatur?</div>
 <img src="img\2.jpg" alt= "lifestyle">
