--- a/index.html
+++ b/index.html
@@ -6,23 +6,35 @@
     <title>Document</title>
 </head>
 <body>
-<ul><li>lifestyle</li>
-<li>photodiary</li>
-<li>music</li>
-<li>travel</li></ul>
-<img src="img\1.JPG"alt="lifestyle" width="300" height="250"> 
+<nav>
+    <li><a href="img\1.jpg">lifestyle</a></li>
+    <li><a href="img\2.jpg">photodiary</a></li>
+    <li><a href="img\3.jpg">music</a></li>
+    <li><a href="img\4.jpg">travel</a></li>
+</nav>
+<img src="img\1.JPG" alt="lifestyle" width="300" height="250" >
+<article>lifestyle</article>  
 <h1>More than just a music festival</h1>
-<div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, autem ad? Quas ea doloremque voluptatem ex, impedit, architecto odio eum recusandae nobis possimus ad, numquam labore sunt iure! Sed, aspernatur?</div>
-<img src="img\2.jpg" alt= "lifestyle">
+<section>
+     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est asperiores quidem dolor, at perspiciatis vel tempora ea? Fugiat quo doloremque inventore, eius obcaecati esse minima consequatur, explicabo aspernatur, repellat dicta.
+</section>
+<img src="img\2.jpg" alt= "photodiary">
+<article>photodiary</article>
 <h1>Life tastes better with coffee</h1>
-<div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi ipsa fugiat deleniti, dolorem rerum nam asperiores officiis eius doloremque accusamus corrupti voluptas officia odit saepe ratione eum exercitationem dolor expedita!</div>
-    <img src="img\3.jpg" alt="photodiary">
+<section> 
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi ipsa fugiat deleniti, dolorem rerum nam asperiores officiis eius doloremque accusamus corrupti voluptas officia odit saepe ratione eum exercitationem dolor expedita!
+</section>
+<img src="img\3.jpg" alt="music">
+<article>music</article>
 <h1>American dream</h1>
-<div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus quo doloremque architecto nesciunt explicabo, alias cum qui maxime sapiente temporibus minus tenetur dolorem, minima modi illum ipsa ad delectus aliquam?</div>
-
-<img src="img\4.jpg" alt="photodiary">
+<section>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus quo doloremque architecto nesciunt explicabo, alias cum qui maxime sapiente temporibus minus tenetur dolorem, minima modi illum ipsa ad delectus aliquam?
+</section>
+<img src="img\4.jpg" alt="travel">
+<article>travel</article>
 <h1>A day exploring the Alps</h1>
-<div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus perferendis dolore dolorum iusto odio, exercitationem ex distinctio corrupti vitae voluptas, ea alias. Officiis perferendis voluptatibus voluptates consequuntur est pariatur asperiores.</div>
-
+<section>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus perferendis dolore dolorum iusto odio, exercitationem ex distinctio corrupti vitae voluptas, ea alias. Officiis perferendis voluptatibus voluptates consequuntur est pariatur asperiores.
+</section>
 </body>
 </html>
