--- a/index.html
+++ b/index.html
@@ -13,27 +13,40 @@
     <li><a href="img\4.jpg">travel</a></li>
 </ul></nav>
 <img src="img\1.JPG" alt="lifestyle"  >
-<article>lifestyle</article>  
-<section>
-    <h1>More than just a music festival</h1>
-     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est asperiores quidem dolor, at perspiciatis vel tempora ea? Fugiat quo doloremque inventore, eius obcaecati esse minima consequatur, explicabo aspernatur, repellat dicta.</p>
-</section>
+<header>
+    <p>lifestyle</p>
+</header>   
+  <article>
+    <section> 
+        <h1>More than just a music festival</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est asperiores quidem dolor, at perspiciatis vel tempora ea? Fugiat quo doloremque inventore, eius obcaecati esse minima consequatur, explicabo aspernatur, repellat dicta.</p></section>
+  </article>
 <img src="img\2.jpg" alt= "photodiary">
-<article>photodiary</article>
-<section> 
-    <h1>Life tastes better with coffee</h1>
-   <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi ipsa fugiat deleniti, dolorem rerum nam asperiores officiis eius doloremque accusamus corrupti voluptas officia odit saepe ratione eum exercitationem dolor expedita!</p>
-</section>
+ <header>
+     <p>photodiary</p>
+</header>
+  <article>
+    <section>
+        <h1>Life tastes better with coffee</h1>
+          <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi ipsa fugiat deleniti, dolorem rerum nam asperiores officiis eius doloremque accusamus corrupti voluptas officia odit saepe ratione eum exercitationem dolor expedita!</p></section>
+  </article>
 <img src="img\3.jpg" alt="music">
-<article>music</article>
-<section>
-   <h1>American dream</h1>
-   <p></p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus quo doloremque architecto nesciunt explicabo, alias cum qui maxime sapiente temporibus minus tenetur dolorem, minima modi illum ipsa ad delectus aliquam?</p>
-</section><img src="img\4.jpg" alt="travel">
-<article>travel</article>
-<section>
-  <h1>A day exploring the Alps</h1>
-   <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus perferendis dolore dolorum iusto odio, exercitationem ex distinctio corrupti vitae voluptas, ea alias. Officiis perferendis voluptatibus voluptates consequuntur est pariatur asperiores.</p> 
-</section>
+<header>
+    <p>music</p>
+</header>
+  <article>
+     <section>
+        <h1>American dream</h1>
+          <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus quo doloremque architecto nesciunt explicabo, alias cum qui maxime sapiente temporibus minus tenetur dolorem, minima modi illum ipsa ad delectus aliquam?</p></section>
+  </article>
+<img src="img\4.jpg" alt="travel">
+<header>
+    <p>travel</p>
+</header>
+  <article>
+     <section>
+         <h1>A day exploring the Alps</h1>
+           <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus perferendis dolore dolorum iusto odio, exercitationem ex distinctio corrupti vitae voluptas, ea alias. Officiis perferendis voluptatibus voluptates consequuntur est pariatur asperiores.</p> </section>
+  </article>
 </body>
 </html>
