--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
      <li><a href="img\2.jpg">photodiary</a></li>
      <li><a href="img\3.jpg">music</a></li>
      <li><a href="img\4.jpg">travel</a></li>
-  </ul></nav>
+   </ul></nav>
+  </header>
 <img src="img\1.JPG" alt="lifestyle"  >
 <article>
   <p>lifestyle</p>
