--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
      <li><a href="img\4.jpg">travel</a></li>
    </ul></nav>
   </header>
-<img src="img\1.JPG" alt="lifestyle"  >
-<article>
-  <p>lifestyle</p>
-    <h2>More than just a music festival</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est asperiores quidem dolor, at perspiciatis vel tempora ea? Fugiat quo doloremque inventore, eius obcaecati esse minima consequatur, explicabo aspernatur, repellat dicta.</p></section>
-</article>
-<img src="img\2.jpg" alt= "photodiary">
-<article>
-  <p>photodiary</p>
-    <h2>Life tastes better with coffee</h2>
-      <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi ipsa fugiat deleniti, dolorem rerum nam asperiores officiis eius doloremque accusamus corrupti voluptas officia odit saepe ratione eum exercitationem dolor expedita!</p></section>
-</article>
-<img src="img\3.jpg" alt="music">
-<article>
-  <p>music</p> 
-    <h2>American dream</h2>
+    <article>
+      <img src="img\1.JPG" alt="lifestyle"  >
+        <p>lifestyle</p>
+        <h2>More than just a music festival</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est asperiores quidem dolor, at perspiciatis vel tempora ea? Fugiat quo doloremque inventore, eius obcaecati esse minima consequatur, explicabo aspernatur, repellat dicta.</p></section>
+   </article>
+   <article>
+      <img src="img\2.jpg" alt= "photodiary">
+        <p>photodiary</p>
+        <h2>Life tastes better with coffee</h2>
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi ipsa fugiat deleniti, dolorem rerum nam asperiores officiis eius doloremque accusamus corrupti voluptas officia odit saepe ratione eum exercitationem dolor expedita!</p></section>
+   </article>
+   <article>
+    <img src="img\3.jpg" alt="music">
+      <p>music</p> 
+      <h2>American dream</h2>
       <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus quo doloremque architecto nesciunt explicabo, alias cum qui maxime sapiente temporibus minus tenetur dolorem, minima modi illum ipsa ad delectus aliquam?</p></section>
-</article>
-<img src="img\4.jpg" alt="travel">
-<article>
-  <p>travel</p>
-    <h2>A day exploring the Alps</h2>
+   </article>
+   <article>
+    <img src="img\4.jpg" alt="travel">
+      <p>travel</p>
+      <h2>A day exploring the Alps</h2>
       <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus perferendis dolore dolorum iusto odio, exercitationem ex distinctio corrupti vitae voluptas, ea alias. Officiis perferendis voluptatibus voluptates consequuntur est pariatur asperiores.</p> </section>
-</article>
-  <p><input type="button" value="load More"></p>
+   </article>
+  <button>load More</button>
 </body>
 </html>
